[package]
name = "nftpawn-vesting"
version = "0.0.2"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[dev-dependencies]
anyhow = "1.0"
near-primitives = "0.5.0"
near-sdk = "4.0.0"
near-units = "0.2.0"
serde_json = "1.0"
tokio = { version = "1.14", features = ["full"] }
workspaces = "0.3"

# remember to include a line for each contract
fungible-token = { path = "./fungible-token" }
vesting = { path = "./vesting" }

[workspace]
# remember to include a member for each contract
members = [
  "fungible-token",
  "vesting",
]