[package]
name = "nftpawn-vesting"
version = "0.0.1"
authors = ["Nftpawm Team <hello@nftpawn.financial>"]
edition = "2021"

[dev-dependencies]
anyhow = "1.0"
near-primitives = "0.5.0"
near-sdk = "4.0.0"
near-units = "0.2.0"
serde_json = "1.0"
tokio = { version = "1.14", features = ["full"] }
workspaces = "0.3"

# remember to include a line for each contract
nftpawn-token = { path = "./nftpawn-token" }
vesting = { path = "./vesting" }

[workspace]
# remember to include a member for each contract
members = [
  "nftpawn-token",
  "vesting",
]